# null_renderer_plugin

./: .gitmodules  CMakeLists.txt  README.md
include/: NullRenderer.hpp  NullRendererFactory.hpp  NullRendererPlugin.hpp
src/: NullRenderer.cpp  NullRendererFactory.cpp  NullRendererPlugin.cpp
